// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea Snapshots > matches snapshot for default textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  placeholder="Enter message"
/>
`;

exports[`Textarea Snapshots > matches snapshot for disabled textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  disabled=""
  placeholder="Disabled"
/>
`;

exports[`Textarea Snapshots > matches snapshot for textarea with custom height 1`] = `
<textarea
  class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 min-h-[200px]"
  placeholder="Tall textarea"
/>
`;
